# AeroSpace-Alley-Comps

./: .gitignore  ANALYTICS_README.md  AeroComps.py  CHANGELOG.md  CLEANUP_SUMMARY.md  COMPLETE_AUDIT_AND_FALLBACK.md  INTEGRATION_GUIDE.md  LOCAL_SETUP_GUIDE.md  MIGRATION_PLAN_MARKET_ANALYSIS_PLATFORM.md  NETWORK_SWITCHING_ANALYSIS.md  OPTIMIZED_TEST_STRATEGY.md  PROJECT_STRUCTURE.md  PROTECTION_SYSTEM_VALIDATION.md  QUERY_FIX_ANALYSIS.md  QUICKSTART.md  RATE_LIMIT_PROTECTION_SPECIFICATION.md  README.md  SERPAPI_ANALYSIS.md  SESSION_HANDOFF.md  STRATEGY_JOB_CAP_OPTIMIZATION.md  TEST_RUN_SUMMARY.md  THRESHOLD_AND_ADZUNA_RATIONALE.md  VSCODE_BEGINNER_GUIDE.md  VSCODE_SETUP.md  analytics.py  config.example.json  debug_query.py  quick_check.py  quick_fix_test.py  salary_extraction_pseudocode.py  simple_test.py  test_current_query.py  test_exact_params.py  test_matching_logic.py
data/: Aerospace_Alley_Companies.xlsx  Test_3_Companies.xlsx  Test_Max25_9Companies.csv  convert_test_csv_to_excel.py
diagnostics/: TEST_SETUP_GUIDE.md  Test_Diverse_Tiers_9Companies.csv  check_block_status.py  convert_test_csv_to_excel.py  setup_check.py
market_intel/: .env.example  README.md  __init__.py  config.json  enrich_exhibitors.py  pyproject.toml  requirements.txt  setup.cfg
market_intel/connectors/: __init__.py  apollo.py  base.py
market_intel/data/: PERPLEXITY_PROMPT.md  exhibitors.csv  spacecom_2026_exhibitors.xlsx
market_intel/legacy/: __init__.py  rate_limit_protection.py
market_intel/log/: enrichment_audit.jsonl
market_intel/templates/: exhibitor_template.csv
(+23 files in other folders)
