[project]
name = "market_intel"
version = "1.0.0"
description = "Contact enrichment pipeline for trade show exhibitors"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",
    "requests>=2.28.0",
]

[project.scripts]
enrich = "market_intel.enrich_exhibitors:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["market_intel*"]
